--- a/inst/book/conclusoes.qmd
+++ b/inst/book/conclusoes.qmd
@@ -8,9 +8,9 @@
 > -- ChatGPT
 :::
 
-Este trabalho de doutorado teve como objeto de estudo os Captchas, que são desafios utilizados para identificar se o acesso à uma página na internet é realizada por uma pessoa ou uma máquina. A pesquisa apresentou um breve histórico dos Captchas, os problemas de sua utilização em serviços públicos e as abordagens existentes para resolução automática de Captchas. Em seguida, apresentou-se como uma nova abordagem, o WAWL, poderia aliar técnicas de raspagem de dados e aprendizado estatístico com rótulos parciais para obter modelos poderosos de resolução de Captchas sem a necessidade de anotar vários casos manualmente. Por fim, foram apresentadas as propriedades do modelo proposto e os resultados empíricos através de uma série de simulações.
+Este trabalho de doutorado teve como objeto de estudo os Captchas, que são desafios utilizados para identificar se o acesso à uma página na internet é realizado por uma pessoa ou uma máquina. A pesquisa apresentou um breve histórico dos Captchas, os problemas de sua utilização em serviços públicos e as abordagens existentes para resolução automática de Captchas. Em seguida, apresentou-se como uma nova abordagem, o WAWL, poderia aliar técnicas de raspagem de dados e aprendizado estatístico com rótulos parciais para obter modelos poderosos de resolução de Captchas sem a necessidade de anotar vários casos manualmente. Por fim, foram apresentadas as propriedades do modelo proposto e os resultados empíricos através de uma série de simulações.
 
-Os resultados da pesquisa foram positivos. Na parte teórica, várias pesquisas já apontavam que o aprendizado com rótulos parciais ou rótulos complementares possuiam boas propriedades. O resultado foi verificado a estudando-se as propriedades da função de perda proposta. Na parte prática, o trabalho mostrou que a técnica apresenta bons resultados, aumentando a acurácia dos modelos iniciais em mais de 3 vezes, sem a necessidade de anotar novos dados. Além disso, foram encontradas evidências de que o método pode ser aplicado iterativamente, resultado em modelos com poder preditivo ainda maior.
+Os resultados da pesquisa foram positivos. Na parte teórica, várias pesquisas já apontavam que o aprendizado com rótulos parciais ou rótulos complementares possuiam boas propriedades. O resultado foi verificado estudando-se as propriedades da função de perda proposta. Na parte prática, o trabalho mostrou que a técnica apresenta bons resultados, aumentando a acurácia dos modelos iniciais em mais de 3 vezes, sem a necessidade de anotar novos dados. Além disso, foram encontradas evidências de que o método pode ser aplicado iterativamente, resultado em modelos com poder preditivo ainda maior.
 
 As contribuições do estudo podem ser organizadas em três tipos: contribuições para a sociedade em geral, contribuições para a pesquisa acadêmica e contribuições para a comunidade de programação. Os próximos parágrafos descrevem esses avanços.
 
@@ -26,8 +26,8 @@ Com isso, pode-se concluir que os quatro objetivos descritos na @sec-objetivos f
 
 Outra limitação importante do estudo está na aplicação iterada. A pesquisa apresentou essa parte como um resultado adicional, mas os limites da aplicação iterada ainda não foram estudados de forma completa. Essa limitação pode ser entendida também como um próximo passo, que seria uma solução de *online learning*
 
-Uma extensão possível desta pesquisa é a criação de um modelo que aprende diretamente da *web*, sem a separação de passos descrita pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do Captcha como método de obtenção de amostras do *dataset* do Captcha (mais detalhes na @sec-captcha-do-zero). Dessa forma, o modelo poderia obter novos dados em cada *minibatch*, indefinidamente. A vanagem dessa abordagem é que ela seria menos burocrática que o WAWL, que precisa de uma pessoa para escrever as aplicações iteradas. A desvantagem é que o ajuste do modelo dependeria de uma conexão com a internet e seria mais suscetível a problemas de conexão, que precisariam ser tratados com cuidado.
+Uma extensão possível desta pesquisa é a criação de um modelo que aprende diretamente da *web*, sem a separação de passos descrita pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do Captcha como método de obtenção de amostras do *dataset* do Captcha (mais detalhes na @sec-captcha-do-zero). Dessa forma, o modelo poderia obter novos dados em cada *minibatch*, indefinidamente. A vantagem dessa abordagem é que ela seria menos burocrática que o WAWL, que precisa de uma pessoa para escrever as aplicações iteradas. A desvantagem é que o ajuste do modelo dependeria de uma conexão com a internet e seria mais suscetível a problemas de conexão, que precisariam ser tratados com cuidado.
 
-Outra extensão oportuna seria a criação de um modelo geral de resolução de Captchas, desenvolvido a partir das bases que foram construídas durante a pesquisa. Esse modelo poderia ser utilizado como modelo inicial para a resolução de novos Captchas e aprimorado com o oráculo, podendo até afastar completamente a necessidade de anotação manual. No momento, não é possível saber que esse modelo realmente funcionaria na prática, já que i) nada garante que ele tenha uma acurácia maior que 10% para um novo Captcha, mesmo se construído com base em Captchas de várias origens e ii) foram encontradas evidências de que os modelos com acurácia menor de 10% têm mais dificuldades em melhorar com o método WAWL.
+Outra extensão oportuna seria a criação de um modelo geral de resolução de Captchas, desenvolvido a partir das bases que foram construídas durante a pesquisa. Esse modelo poderia ser utilizado como modelo inicial para a resolução de novos Captchas e aprimorado com o oráculo, podendo até afastar completamente a necessidade de anotação manual. No momento, não é possível saber se esse modelo realmente funcionaria na prática, já que i) nada garante que ele tenha uma acurácia maior que 10% para um novo Captcha, mesmo se construído com base em Captchas de várias origens e ii) foram encontradas evidências de que os modelos com acurácia menor de 10% têm mais dificuldades em melhorar com o método WAWL.
 
 A presente tese foi fruto de um longo processo de investigação e desenvolvimento, investigando os aspectos relevantes dos Captchas de textos em imagens. Espera-se que a metodologia proposta, os resultados obtidos e os pacotes computacionais desenvolvidos sejam úteis na luta pela abertura dos dados públicos, especialmente no judiciário. O uso de Captchas em sites de serviços públicos deve acabar.
