--- a/inst/book/captcha.bib
+++ b/inst/book/captcha.bib
@@ -108,8 +108,10 @@
 
 @misc{diagnosticoABJ,
   title = {Diagn\'ostico Do {{Contencioso Tribut\'ario Administrativo}}},
+  author = {ABJ},
   abstract = {Estudo sobre estrutura do contencioso, processos administrativos tribut\'arios e percep\c{c}\~oes dos agentes},
   howpublished = {https://abj.org.br/pesquisas/bid-tributario/},
+  year = {2022},
   file = {C\:\\Users\\julio\\Zotero\\storage\\4IA5SLM6\\bid-tributario.html}
 }
 
@@ -295,6 +297,7 @@
 @misc{InaccessibilityCAPTCHA,
   title = {Inaccessibility of {{CAPTCHA}}},
   howpublished = {https://www.w3.org/TR/turingtest/},
+  year = {2021},
   file = {C\:\\Users\\julio\\Zotero\\storage\\ZUPP2IYZ\\turingtest.html}
 }
 
@@ -573,9 +576,11 @@
 
 @misc{ObservatorioInsolvenciaRio,
   title = {Observat\'orio Da Insolv\^encia: {{Rio}} de {{Janeiro}}},
+  author = {ABJ},
   shorttitle = {Observat\'orio Da Insolv\^encia},
   abstract = {Estudo sobre as recupera\c{c}\~oes judiciais do estado do Rio de Janeiro.},
   howpublished = {https://abj.org.br/pesquisas/obsrjrj/},
+  year = {2021},
   file = {C\:\\Users\\julio\\Zotero\\storage\\C97CUUAZ\\obsrjrj.html}
 }
 
@@ -651,8 +656,10 @@
 
 @misc{TempoDosProcessos,
   title = {Tempo Dos Processos Relacionados \`a Ado\c{c}\~ao},
+  author = {ABJ},
   abstract = {An\'alise do tempo dos processos relacionados \`a ado\c{c}\~ao no Brasil, especialmente de processos relativos a desconstitui\c{c}\~ao do poder familiar.},
   howpublished = {https://abj.org.br/pesquisas/adocao/},
+  year = {2014},
   file = {C\:\\Users\\julio\\Zotero\\storage\\76DWFWY4\\adocao.html}
 }
 
