--- a/inst/book/references.bib
+++ b/inst/book/references.bib
@@ -62,18 +62,6 @@
 	note = {Publisher: Nature Publishing Group}
 }
 
-@article{lecun2015a,
-	title = {Deep learning},
-	author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
-	year = {2015},
-	date = {2015},
-	journal = {nature},
-	pages = {436{\textendash}444},
-	volume = {521},
-	number = {7553},
-	note = {Publisher: Nature Publishing Group}
-}
-
 @article{goodfellow2020,
 	title = {Generative adversarial networks},
 	author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
@@ -105,14 +93,6 @@
 }
 
 @inproceedings{ye2018,
-	title = {Yet another text captcha solver: A generative adversarial network based approach},
-	author = {Ye, Guixin and Tang, Zhanyong and Fang, Dingyi and Zhu, Zhanxing and Feng, Yansong and Xu, Pengfei and Chen, Xiaojiang and Wang, Zheng},
-	year = {2018},
-	date = {2018},
-	pages = {332{\textendash}348}
-}
-
-@inproceedings{ye2018a,
 	title = {Yet another text captcha solver: A generative adversarial network based approach},
 	author = {Ye, Guixin and Tang, Zhanyong and Fang, Dingyi and Zhu, Zhanxing and Feng, Yansong and Xu, Pengfei and Chen, Xiaojiang and Wang, Zheng},
 	year = {2018},
@@ -241,6 +221,8 @@
 
 @misc{inaccess,
 	title = {Inaccessibility of CAPTCHA},
+	author = {W3C},
+	year = {2021},
 	url = {https://www.w3.org/TR/turingtest/}
 }
 
@@ -263,21 +245,29 @@
 
 @misc{observat,
 	title = {Observatório da insolvência: Rio de Janeiro},
+	author = {ABJ},
+	year = {2021},
 	url = {https://abj.org.br/pesquisas/obsrjrj/}
 }
 
 @misc{tempodo,
 	title = {Tempo dos processos relacionados à adoção},
+	author = {ABJ},
+	year = {2014},
 	url = {https://abj.org.br/pesquisas/adocao/}
 }
 
 @misc{diagnost,
 	title = {Diagnóstico do Contencioso Tributário Administrativo},
+	author = {ABJ},
+	year = {2022},
 	url = {https://abj.org.br/pesquisas/bid-tributario/}
 }
 
 @misc{diagnosticoABJ,
 	title = {Diagnóstico do Contencioso Tributário Administrativo},
+	author = {ABJ},
+	year = {2022},
 	url = {https://abj.org.br/pesquisas/bid-tributario/}
 }
 
@@ -357,10 +347,17 @@
 	note = {Publisher: Wiley Online Library}
 }
 
-@article{ramesh,
-	title = {Hierarchical Text-Conditional Image Generation with CLIP Latents},
-	author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
-	doi = {10.48550/arXiv.2204.06125}
+@article{rameshHierarchicalTextConditionalImage2022,
+  title = {Hierarchical {{Text-Conditional Image Generation}} with {{CLIP Latents}}},
+  author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  year = {2022},
+  month = apr,
+  number = {arXiv:2204.06125},
+  eprint = {2204.06125},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2204.06125}
 }
 
 @book{kuhn2019,
@@ -392,10 +389,18 @@
 	note = {Publisher: IEEE}
 }
 
-@article{kingma2014,
-	title = {Adam: A Method for Stochastic Optimization},
-	author = {Kingma, Diederik P. and Ba, Jimmy},
-	doi = {10.48550/arXiv.1412.6980}
+@article{kingmaAdamMethodStochastic2017,
+  title = {Adam: {{A Method}} for {{Stochastic Optimization}}},
+  shorttitle = {Adam},
+  author = {Kingma, Diederik P. and Ba, Jimmy},
+  year = {2017},
+  month = jan,
+  number = {arXiv:1412.6980},
+  eprint = {1412.6980},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1412.6980}
 }
 
 @inbook{lecun2012,
@@ -465,24 +470,7 @@
 	volume = {30}
 }
 
-@article{ishida2017a,
-	title = {Learning from complementary labels},
-	author = {Ishida, Takashi and Niu, Gang and Hu, Weihua and Sugiyama, Masashi},
-	year = {2017},
-	date = {2017},
-	journal = {Advances in neural information processing systems},
-	volume = {30}
-}
-
 @article{magick,
-	title = {magick: Advanced Graphics and Image-Processing in R},
-	author = {Ooms, Jeroen},
-	year = {2021},
-	date = {2021},
-	url = {https://CRAN.R-project.org/package=magick}
-}
-
-@article{magick-2,
 	title = {magick: Advanced Graphics and Image-Processing in R},
 	author = {Ooms, Jeroen},
 	year = {2021},
@@ -505,17 +493,6 @@
 	date = {2020},
 	publisher = {PMLR},
 	pages = {3072{\textendash}3081}
-}
-
-@article{zhao2017a,
-	title = {Web scraping},
-	author = {Zhao, Bo},
-	year = {2017},
-	date = {2017},
-	journal = {Encyclopedia of big data},
-	pages = {1{\textendash}3},
-	url = {https://www.researchgate.net/profile/Bo-Zhao-3/publication/317177787_Web_Scraping/links/5c293f85a6fdccfc7073192f/Web-Scraping.pdf},
-	note = {Publisher: Springer Living ed. Cham}
 }
 
 @article{xml2,
@@ -637,14 +614,6 @@
 	url = {https://CRAN.R-project.org/package=reticulate}
 }
 
-@article{torch-2,
-	title = {torch: Tensors and Neural Networks with 'GPU' Acceleration},
-	author = {Falbel, Daniel and Luraschi, Javier},
-	year = {2022},
-	date = {2022},
-	url = {https://CRAN.R-project.org/package=torch}
-}
-
 @article{piggyback,
 	title = {piggyback: Managing Larger Data on a GitHub Repository},
 	author = {Boettiger, Carl and Ho, Tan},
@@ -661,18 +630,17 @@
 	url = {https://CRAN.R-project.org/package=usethis}
 }
 
-@article{piggyback-2,
-	title = {piggyback: Managing Larger Data on a GitHub Repository},
-	author = {Boettiger, Carl and Ho, Tan},
-	year = {2022},
-	date = {2022},
-	url = {https://CRAN.R-project.org/package=piggyback}
-}
-
 @article{ramesh,
-	title = {Hierarchical Text-Conditional Image Generation with CLIP Latents},
-	author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
-	doi = {10.48550/arXiv.2204.06125}
+  title = {Hierarchical {{Text-Conditional Image Generation}} with {{CLIP Latents}}},
+  author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  year = {2022},
+  month = apr,
+  number = {arXiv:2204.06125},
+  eprint = {2204.06125},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2204.06125}
 }
 
 @inproceedings{murray2012,
